Trying to get local examples (different URI structure) to load (#80).